# encryptor

./: .gitignore  Cargo.toml  README.md  run-encryptor.bat  run-encryptor.sh
.github/workflows/: release.yml
docs/: DOCUMENTATION.md  TROUBLESHOOTING.md
src/: crypto.rs  main.rs
src/system_check/: env_setup.rs  installers.rs  mod.rs  package_managers.rs  utils.rs
