[package]
name = "encryptor"
version = "0.1.0"
edition = "2021"
description = "A practical command-line cryptographic tool with hybrid classical + post-quantum security"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/encryptor"
keywords = ["cryptography", "cli", "encryption", "post-quantum", "security"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "encryptor"
path = "src/main.rs"

[dependencies]
rpassword = "7.3"
aes-gcm = "0.10"
openssl = { version = "0.10" }
openssl-sys = "0.9"
pqcrypto-traits = "0.3"
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
zeroize = "1.7"
argon2 = "0.5"
which = "6.0"
glob = "0.3"
arboard = "3.4" 